[package]
name = "generator"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Kosiewski <thoma471@googlemail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.17", features = ["derive", "env"] }
csv = "1.1.6"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
shared_types = { path = "../shared_types" }
