[package]
name = "rcpsp"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Kosiewski <thoma471@googlemail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.2"
psp_lib_parser = { path = "../psp_lib_parser" }
rand = "0.8.5"
log = "0.4.17"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }

[[bench]]
name = "simple_schedule"
harness = false
