[package]
name = "rcpsp"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Kosiewski <thoma471@googlemail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.13.2"
log = "0.4.17"
num_cpus = "1.15.0"
petgraph = "0.6.3"
psp_lib_parser = { path = "../psp_lib_parser" }
rand = "0.8.5"
rayon = "1.7.0"

[dev-dependencies]
criterion = { version = "0.5.0", features = ["html_reports"] }

[[bench]]
name = "scheduler"
harness = false
