[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Kosiewski <thoma471@googlemail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "4.0.18", features = ["derive"] }
clap-verbosity-flag = "1.0.1"
env_logger = "0.9.0"
log = "0.4.17"
psp_lib_parser = { path = "../psp_lib_parser" }
rcpsp = { path = "../rcpsp" }

[features]
